# supermedicapp

xn--d1abkig.online/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  passenger_wsgi.py  pyproject.toml  requirements.txt
xn--d1abkig.online/.github/workflows/: deploy.yml
xn--d1abkig.online/supermediconline/: .env.example  manage.py  requirements.txt
xn--d1abkig.online/supermediconline/supermedicapp/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
xn--d1abkig.online/supermediconline/supermedicapp/api/application/: serializers.py  views.py
xn--d1abkig.online/supermediconline/supermedicapp/api/appointment/: serializers.py  views.py
xn--d1abkig.online/supermediconline/supermedicapp/api/doctor_description/: serializers.py  views.py
xn--d1abkig.online/supermediconline/supermedicapp/api/user/: serializers.py  views.py
xn--d1abkig.online/supermediconline/supermedicapp/api/user_step/: serializers.py  views.py
xn--d1abkig.online/supermediconline/supermedicapp/migrations/: 0001_initial.py  0002_doctordescription_medical_degree_and_more.py  0003_alter_userstep_name_alter_userstep_telegram_id_and_more.py  0004_userstep_initial_step.py
xn--d1abkig.online/supermediconline/supermedicapp/static/supermedicapp/css/: date_picker.css  selects.css  start_page.css  style.css
xn--d1abkig.online/supermediconline/supermedicapp/templates/supermedicapp/doctors_menu/: add_work_hours.html  (+4 more)
xn--d1abkig.online/supermediconline/supermediconline/: .settings.py.swp  asgi.py  settings.py  urls.py  wsgi.py
(+35 files in other folders)
